ALL IZZ WELL ---> so call comes and the toast is shown but toast goes off after some time and need to dump the data to my server

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -35,8 +35,11 @@
 
         <activity
             android:name="com.example.tryfragments.CallScreenActivity"
-            android:label="@string/title_activity_call_screen" >
+            android:label="@string/title_activity_call_screen"
+            android:theme="@android:style/Theme.Dialog">
         </activity>
+        
+        
     </application>
 
 </manifest>
